[gd_scene load_steps=48 format=3 uid="uid://c127fssclensi"]

[ext_resource type="Script" path="res://Enemies/Enemies.gd" id="1_fbvbm"]
[ext_resource type="Texture2D" uid="uid://16bj1yhsvyja" path="res://Sprites/Enemies/Chicken/Hit (32x34).png" id="2_5rgl2"]
[ext_resource type="Texture2D" uid="uid://5io4gfwbuoip" path="res://Sprites/Enemies/Chicken/Idle (32x34).png" id="2_7yf5p"]
[ext_resource type="Texture2D" uid="uid://5kd1fml7oru8" path="res://Sprites/Other/Dust Particle.png" id="2_hb5gr"]
[ext_resource type="Texture2D" uid="uid://rgqx7mey51pw" path="res://Sprites/Enemies/Chicken/Run (32x34).png" id="3_rulx5"]
[ext_resource type="Script" path="res://Collision/Hit_Box.gd" id="7_lkyp5"]
[ext_resource type="Script" path="res://Collision/Hurt_Box.gd" id="16_407lf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sbusj"]
atlas = ExtResource("2_5rgl2")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhsi6"]
atlas = ExtResource("2_5rgl2")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx0o3"]
atlas = ExtResource("2_5rgl2")
region = Rect2(64, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc11i"]
atlas = ExtResource("2_5rgl2")
region = Rect2(96, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tayg"]
atlas = ExtResource("2_5rgl2")
region = Rect2(128, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_xva3b"]
atlas = ExtResource("2_7yf5p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nalw"]
atlas = ExtResource("2_7yf5p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70oeo"]
atlas = ExtResource("2_7yf5p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sts3"]
atlas = ExtResource("2_7yf5p")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3ym8"]
atlas = ExtResource("2_7yf5p")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwkn6"]
atlas = ExtResource("2_7yf5p")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cqha"]
atlas = ExtResource("2_7yf5p")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nr8y"]
atlas = ExtResource("2_7yf5p")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yd2p"]
atlas = ExtResource("2_7yf5p")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd1q3"]
atlas = ExtResource("2_7yf5p")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jixun"]
atlas = ExtResource("2_7yf5p")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylial"]
atlas = ExtResource("2_7yf5p")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5trd"]
atlas = ExtResource("2_7yf5p")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c544b"]
atlas = ExtResource("3_rulx5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pexvf"]
atlas = ExtResource("3_rulx5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xa3d"]
atlas = ExtResource("3_rulx5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xm8t"]
atlas = ExtResource("3_rulx5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28goi"]
atlas = ExtResource("3_rulx5")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8t8g"]
atlas = ExtResource("3_rulx5")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rex8h"]
atlas = ExtResource("3_rulx5")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_156if"]
atlas = ExtResource("3_rulx5")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsskk"]
atlas = ExtResource("3_rulx5")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_66dug"]
atlas = ExtResource("3_rulx5")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jwg1"]
atlas = ExtResource("3_rulx5")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylikv"]
atlas = ExtResource("3_rulx5")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i8wy"]
atlas = ExtResource("3_rulx5")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tml1y"]
atlas = ExtResource("3_rulx5")
region = Rect2(416, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_idhum"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbusj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhsi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx0o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc11i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tayg")
}],
"loop": true,
"name": &"Chicken_Damaged",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xva3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nalw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70oeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sts3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3ym8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwkn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cqha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nr8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yd2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd1q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jixun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylial")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5trd")
}],
"loop": true,
"name": &"Chicken_Idle",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c544b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pexvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xa3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xm8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28goi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8t8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rex8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_156if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsskk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66dug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jwg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylikv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i8wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tml1y")
}],
"loop": true,
"name": &"Chicken_Run",
"speed": 25.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_3ld2l"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_nmddb"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.13242, 1), 0.0, 0.0, 0, 0, Vector2(0.315068, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_qnfyl"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_kn7vb"]
offsets = PackedFloat32Array(0, 0.691099, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yidtu"]
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xpef"]
size = Vector2(28.6667, 5.33333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwh65"]
size = Vector2(28.5, 23.3333)

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("sprite_2d", "hurt_box", "collision_shape_2d") groups=["Enemy"]]
scale = Vector2(3, 3)
platform_floor_layers = 4278190081
script = ExtResource("1_fbvbm")
animations = {
"Damaged": "Chicken_Damaged",
"Dead": "Dead",
"Double_Jump": "Frog_Double_Jump",
"Falling": "Frog_Falling",
"Idle": "Frog_Idle",
"Jumping": "Frog_Jumping",
"Spawn": "Spawn",
"Walking": "Chicken_Run"
}
sprite_2d = NodePath("AnimatedSprite2D")
hurt_box = NodePath("Hurt_Box/CollisionShape2D")
collision_shape_2d = NodePath("CollisionShape2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_idhum")
animation = &"Chicken_Idle"
frame_progress = 0.168538

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_3ld2l")
position = Vector2(0, 15.6667)
emitting = false
amount = 2
one_shot = true
explosiveness = 1.0
texture = ExtResource("2_hb5gr")
gravity = Vector2(100, 0)
initial_velocity_max = 200.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_nmddb")
color_ramp = SubResource("Gradient_qnfyl")
color_initial_ramp = SubResource("Gradient_kn7vb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_yidtu")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Hurt_Box" type="Area2D" parent="."]
position = Vector2(-1, -16)
collision_layer = 2
collision_mask = 2
script = ExtResource("16_407lf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_Box"]
position = Vector2(0.333334, 2.66667)
shape = SubResource("RectangleShape2D_8xpef")
debug_color = Color(0.976471, 0, 0.423529, 0.556863)

[node name="Hit_Box" type="Area2D" parent="."]
position = Vector2(-0.333333, 0)
script = ExtResource("7_lkyp5")
damage = 20.0
knock_back_strength = Vector2(800, 200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_Box"]
position = Vector2(-0.25, 1)
shape = SubResource("RectangleShape2D_dwh65")
debug_color = Color(0.768627, 0.447059, 0, 0.419608)

[node name="Edge_Check_Right" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(0, 20)

[node name="Edge_Check_Left" type="RayCast2D" parent="."]
position = Vector2(-10.6667, -0.333333)
target_position = Vector2(0, 20)

[connection signal="area_entered" from="Hurt_Box" to="Hurt_Box" method="_on_area_entered"]
